--- a/FrontEnd/tha2.html
+++ b/FrontEnd/tha2.html
@@ -1,50 +1,62 @@
-<html>
+<!DOCTYPE html>
+  <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0">
+    <meta charset="utf-8">
+    <title>Devsnest THAs</title>
+    <link rel="stylesheet" type="text/css" href="tha2styles.css">
+  </head>
+  <body>
     <h1>Sample Business Letter</h1>
-    <body>
-        <div>Ken's Cheese House</div>
-        <div>34 Chatley Avenue</div>
-        <div>Seattle, WA 98765</div>
-        <br/>
-        <div>October 23, 2017</div>
-        <br/>
-        <div>Fred Flintstone</div>
-        <div>Sales Manager</div>
-        <div>Cheese Specialists Inc.</div>
-        <div>456 Rubble Road</div>
-        <div>Rockville, IL 78777</div>
-        <br/>
-        <div>Dear Mr. Flintstone</div>
-        <br/>
-        <div>My letter body</div>
-        <div>My letter body</div>
-        <div>My letter body</div>
-        <div>My letter body</div>
-        <div>My letter body</div>
-        <div>My letter body</div>
-        <br/>
-        <table>
-            <th>Heading 1</th>
-            <th>Heading 2</th>
-            <th>Heading 3</th>
-            <tr>
-                <td>data1</td>
-                <td>data2</td>
-                <td>data3</td>
-            </tr>
-            <tr>
-                <td>data1</td>
-                <td>data2</td>
-                <td>data3</td>
-            </tr>
-            <tr>
-                <td>data1</td>
-                <td>data2</td>
-                <td>data3</td>
-            </tr>
-        </table>
-        <br>    
-        <div>Lorem ipsum dipsum Lorem ipsum dipsum Lorem ipsum dipsum Lorem ipsum dipsum Lorem ipsum dipsum </div>
-        <br/>
-        <div>Regards</div>
-    </body>
+
+    <div>Ken's Cheese House</div>
+    <div>34 Chatley Avenue</div>
+    <div>Seattle, WA 98765</div>
+    <br />
+    <div>October 23, 2017</div>
+    <br />
+    <div>Fred Flintstone</div>
+    <div>Sales Manager</div>
+    <div>Cheese Specialists Inc.</div>
+    <div>456 Rubble Road</div>
+    <div>Rockville, IL 78777</div>
+    <br />
+    <div>Dear Mr. Flintstone</div>
+    <br />
+    <div>My letter body</div>
+    <div>My letter body</div>
+    <div>My letter body</div>
+    <div>My letter body</div>
+    <div>My letter body</div>
+    <div>My letter body</div>
+    <br />
+    <table>
+      <th>Heading 1</th>
+      <th>Heading 2</th>
+      <th>Heading 3</th>
+      <tr>
+        <td>data1</td>
+        <td>data2</td>
+        <td>data3</td>
+      </tr>
+      <tr>
+        <td>data1</td>
+        <td>data2</td>
+        <td>data3</td>
+      </tr>
+      <tr>
+        <td>data1</td>
+        <td>data2</td>
+        <td>data3</td>
+      </tr>
+    </table>
+    <br />
+    <div>
+      Lorem ipsum dipsum Lorem ipsum dipsum Lorem ipsum dipsum Lorem ipsum
+      dipsum Lorem ipsum dipsum
+    </div>
+    <br />
+    <div>Regards</div>
+  </body>
 </html>
