--- a/FrontEnd/day2/tha2.html
+++ b/FrontEnd/day2/tha2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <meta charset="utf-8">
     <title>Devsnest THAs</title>
-    <link rel="stylesheet" type="text/css" href="css/tha2styles.css">
+    <link rel="stylesheet" type="text/css" href="tha2styles.css">
   </head>
   <body>
     <h1>Sample Business Letter</h1>
