added to gh-pages

--- a/FrontEnd/day3/index.html
+++ b/FrontEnd/day3/index.html
@@ -1,118 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/css2?family=Varela&display=swap" rel="stylesheet">    
-<title>Resume</title>
-  </head>
-  <body>
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Varela&display=swap" rel="stylesheet">
+    <title>Resume</title>
+</head>
+
+<body>
     <div class="container">
         <div class="name">Tushar Gupta</div>
         <div class="p20">
-              PROFILE
+            PROFILE
             <p>Team player, motivated & passionate individual with the ability to get the task done</p>
             <br>
-              PERSONAL DETAILS
-            <p><i class="fa fa-calendar-minus-o"></i> 26th October 2000</p>
-            <p><i class="fa fa-flag"></i> Indian</p>
-            <p><i class="fa fa-map-marker"></i> Something XYZ @ India</p>
+            PERSONAL DETAILS
+            <p>
+                <i class="fa fa-calendar-minus-o"></i>
+                26th October 2000</p>
+            <p>
+                <i class="fa fa-flag"></i>
+                Indian</p>
+            <p>
+                <i class="fa fa-map-marker"></i>
+                Something XYZ @ India</p>
             <br>
-              CONTACT
-              <p><i class="fa fa-envelope"></i> email@gmaail.com</p>
-              <p><i class="fa fa-phone"></i> 988744541</p>
-              <p><i class="fa fa-github"></i> tushar5526</p>
-              <p><i class="fa fa-linkedin-square"></i> tushar55</p>
-            </div>
-        <div class="p60">
-          EDUCATION
-          <ul>
-            <li>UG @ KIET</li>
-            <li>12th @ Montfort </li>
-            <li>10th @ Montfort</li>
-          </ul>      
-          <br>
-          <div class="container">
-            <div class="p50">
-              APPLICATION SKILLS
-              <p>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle-o"></i>
-                Unity
-              </p>
-              <p>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle-o"></i>
-                <i class="fa fa-circle-o"></i>
-                Docker, Jenkins
-              </p>
-              <p>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle-o"></i>
-                AR/VR
-              </p>
-              <p>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle-o"></i>
-                <i class="fa fa-circle-o"></i>
-                <i class="fa fa-circle-o"></i>
-                Computer Graphics
-              </p>
-              <p>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle"></i>
-                <i class="fa fa-circle-o"></i>
-                <i class="fa fa-circle-o"></i>
-                Web Development
-              </p>
-            </div>
-            <div class="p50">
-              LANGUAGES
-              <p><i class="fa fa-code"></i> C++, Python</p>
-              <p><i class="fa fa-code"></i> Javascript, C#, Java</p>
-            </div>
-          </div>  
-          <br>
-          <div class="container">
-            <div class="p50">
-              PROJECTS
-              <p><i class="fa fa-check-circle"></i> AstroBackyard</p>
-              <p><i class="fa fa-check-circle"></i> Pathik</p>
-              <p><i class="fa fa-check-circle"></i> MLOps</p>
-              <p><i class="fa fa-check-circle"></i> Fashion Kart</p>
-              <p><i class="fa fa-check-circle"></i> Smart Shop</p>
-              <p><i class="fa fa-check-circle"></i> Hand Tracking</p>
-              <p><i class="fa fa-check-circle"></i> Missiles Go</p>
-              <p><i class="fa fa-check-circle"></i> Digital Horizon</p>
-            </div>
-            <div class="p50">
-              ACCOMPLISHMENTS
-              <p><i class="fa fa-check-circle"></i> SIH 2020 Winners</p>
-              <p><i class="fa fa-check-circle"></i> NASA Space Apps Global Finalist</p>
-              <p><i class="fa fa-check-circle"></i> Hackout</p>
-              <p><i class="fa fa-check-circle"></i> Virtual Hacks: 4th </p>
-              <p><i class="fa fa-check-circle"></i> Shankara Hackathon: 3rd </p>
-              <p><i class="fa fa-check-circle"></i> Technovation Hackathon: 2nd </p>
-              <p><i class="fa fa-check-circle"></i> Opensource: p5py, fury-gl</p>
-              <p><i class="fa fa-check-circle"></i> Innotech: 3rd</p>
-            </div>
-          </div>    
+            CONTACT
+            <p>
+                <i class="fa fa-envelope"></i>
+                email@gmaail.com</p>
+            <p>
+                <i class="fa fa-phone"></i>
+                988744541</p>
+            <p>
+                <i class="fa fa-github"></i>
+                tushar5526</p>
+            <p>
+                <i class="fa fa-linkedin-square"></i>
+                tushar55</p>
         </div>
-    </body>
+        <div class="p60">
+            EDUCATION
+            <ul>
+                <li>UG @ KIET</li>
+                <li>12th @ Montfort
+                </li>
+                <li>10th @ Montfort</li>
+            </ul>
+            <br>
+            <div class="container">
+                <div class="p50">
+                    APPLICATION SKILLS
+                    <p>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle-o"></i>
+                        Unity
+                    </p>
+                    <p>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle-o"></i>
+                        <i class="fa fa-circle-o"></i>
+                        Docker, Jenkins
+                    </p>
+                    <p>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle-o"></i>
+                        AR/VR
+                    </p>
+                    <p>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle-o"></i>
+                        <i class="fa fa-circle-o"></i>
+                        <i class="fa fa-circle-o"></i>
+                        Computer Graphics
+                    </p>
+                    <p>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle"></i>
+                        <i class="fa fa-circle-o"></i>
+                        <i class="fa fa-circle-o"></i>
+                        Web Development
+                    </p>
+                </div>
+                <div class="p50">
+                    LANGUAGES
+                    <p>
+                        <i class="fa fa-code"></i>
+                        C++, Python</p>
+                    <p>
+                        <i class="fa fa-code"></i>
+                        Javascript, C#, Java</p>
+                </div>
+            </div>
+            <br>
+            <div class="container">
+                <div class="p50">
+                    PROJECTS
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        AstroBackyard</p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        Pathik</p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        MLOps</p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        Fashion Kart</p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        Smart Shop</p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        Hand Tracking</p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        Missiles Go</p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        Digital Horizon</p>
+                </div>
+                <div class="p50">
+                    ACCOMPLISHMENTS
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        SIH 2020 Winners</p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        NASA Space Apps Global Finalist</p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        Hackout</p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        Virtual Hacks: 4th
+                    </p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        Shankara Hackathon: 3rd
+                    </p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        Technovation Hackathon: 2nd
+                    </p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        Opensource: p5py, fury-gl</p>
+                    <p>
+                        <i class="fa fa-check-circle"></i>
+                        Innotech: 3rd</p>
+                </div>
+            </div>
+        </div>
+</body>
+
 </html>
