--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                         <a href="FrontEnd/day3/index.html" class="list-group-item list-group-item-action">
                             Day 3
                         </a>
+                        <a href="FrontEnd/day4/index.html" class="list-group-item list-group-item-action">
+                            Day 3
+                        </a>
                     </div>
                 </div>
             </div>
