--- a/FrontEnd/day5/index.html
+++ b/FrontEnd/day5/index.html
@@ -65,10 +65,10 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <button class="btn btn-secondary cbtn">00</button>
+                        <button class="btn btn-secondary cbtn">0</button>
                     </div>
                     <div class="col">
-                        <button class="btn btn-secondary cbtn">0</button>
+                        <button class="btn btn-secondary cbtn">*</button>
                     </div>
                     <div class="col">
                         <button class="btn btn-secondary cbtn">=</button>
