--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                         <a href="FrontEnd/day5/index.html" class="list-group-item list-group-item-action">
                             Day 5
                         </a>
+                        <a href="FrontEnd/day6/index.md" class="list-group-item list-group-item-action">
+                            Day 6
+                        </a>
                     </div>
                 </div>
             </div>
