--- a/FrontEnd/random/index.html
+++ b/FrontEnd/random/index.html
@@ -22,39 +22,15 @@
             <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                    Front End
+                    Random
                 </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                     <div class="list-group">
-                        <a href="FrontEnd/day1/tha1.html" class="list-group-item list-group-item-action">
-                            Day 1
-                        </a>
-                        <a href="FrontEnd/day2/tha2.html" class="list-group-item list-group-item-action">
-                            Day 2
-                        </a>
-                        <a href="FrontEnd/day3/index.html" class="list-group-item list-group-item-action">
-                            Day 3
-                        </a>
-                        <a href="FrontEnd/day4/index.html" class="list-group-item list-group-item-action">
-                            Day 4
-                        </a>
-                        <a href="FrontEnd/day5/index.html" class="list-group-item list-group-item-action">
-                            Day 5
-                        </a>
-                        <a href="FrontEnd/day6/index.md" class="list-group-item list-group-item-action">
-                            Day 6
-                        </a>
-                        <a href="FrontEnd/day7-8/code.js" class="list-group-item list-group-item-action">
-                            Day 7-8
-                        </a>
-                        <a href="FrontEnd/day9/index.html" class="list-group-item list-group-item-action">
-                            Day 9
-                        </a>
-                        <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
-                            Random
+                        <a href="shooter/index.html" class="list-group-item list-group-item-action">
+                            Shooter
                         </a>
                     </div>
                 </div>
