--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
                         <a href="FrontEnd/day6/index.md" class="list-group-item list-group-item-action">
                             Day 6
                         </a>
-                        <a href="FrontEnd/day7-8/code.js" class="list-group-item list-group-item-action">
-                            Day 7-8
+                        <a href="FrontEnd/day7/code.js" class="list-group-item list-group-item-action">
+                            Day 7
+                        </a>
+                        <a href="FrontEnd/day8/index.html" class="list-group-item list-group-item-action">
+                            Day 8
                         </a>
                         <a href="FrontEnd/day9/index.html" class="list-group-item list-group-item-action">
                             Day 9
