--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                         <a href="FrontEnd/day9/index.html" class="list-group-item list-group-item-action">
                             Day 9
                         </a>
+                        <a href="FrontEnd/day10/index.html" class="list-group-item list-group-item-action">
+                            Day 10
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
