--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
                         <a href="FrontEnd/day10/index.html" class="list-group-item list-group-item-action">
                             Day 10
                         </a>
+                        <a href="FrontEnd/day11/index.html" class="list-group-item list-group-item-action">
+                            Day 11
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
