--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                         <a href="FrontEnd/day11/index.html" class="list-group-item list-group-item-action">
                             Day 11
                         </a>
+                        <a href="FrontEnd/day12/index.html" class="list-group-item list-group-item-action">
+                            Day 12
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
