--- a/index.html
+++ b/index.html
@@ -59,11 +59,17 @@
                         <a href="FrontEnd/day10/index.html" class="list-group-item list-group-item-action">
                             Day 10
                         </a>
-                        <a href="FrontEnd/day11/index.html" class="list-group-item list-group-item-action">
+                        <a href="FrontEnd/day11-13/index.html" class="list-group-item list-group-item-action">
                             Day 11
                         </a>
                         <a href="FrontEnd/day12/index.html" class="list-group-item list-group-item-action">
                             Day 12
+                        </a>
+                        <a href="FrontEnd/day11-13/index.html" class="list-group-item list-group-item-action">
+                            Day 13
+                        </a>
+                        <a href="FrontEnd/day14/index.html" class="list-group-item list-group-item-action">
+                            Day 14
                         </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
