--- a/index.html
+++ b/index.html
@@ -68,8 +68,11 @@
                         <a href="FrontEnd/day11-13/index.html" class="list-group-item list-group-item-action">
                             Day 13
                         </a>
-                        <a href="FrontEnd/day15/index.html" class="list-group-item list-group-item-action">
+                        <a href="FrontEnd/day14/index.html" class="list-group-item list-group-item-action">
                             Day 14
+                        </a>
+                        <a href="FrontEnd/day15/index.html" class="list-group-item list-group-item-action">
+                            Day 15
                         </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
