--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
                         <a href="FrontEnd/day15/index.html" class="list-group-item list-group-item-action">
                             Day 15
                         </a>
+                        <a href="FrontEnd/day16/build/index.html" class="list-group-item list-group-item-action">
+                            Day 16 (1)
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
