--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                         <a href="FrontEnd/day16/build/index.html" class="list-group-item list-group-item-action">
                             Day 16 (1)
                         </a>
+                        <a href="FrontEnd/day16-2/build/index.html" class="list-group-item list-group-item-action">
+                            Day 16 (2)
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
