--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
                         <a href="FrontEnd/day17/build/index.html" class="list-group-item list-group-item-action">
                             Day 17
                         </a>
+                        <a href="FrontEnd/day16-2/build/index.html" class="list-group-item list-group-item-action">
+                            Day 18
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
