--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                         <a href="FrontEnd/day20/build/index.html" class="list-group-item list-group-item-action">
                             Day 20
                         </a>
+                        <a href="FrontEnd/day21/build/index.html" class="list-group-item list-group-item-action">
+                            Day 21
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
