--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
                         <a href="FrontEnd/day21/build/index.html" class="list-group-item list-group-item-action">
                             Day 21
                         </a>
+                        <a href="FrontEnd/day22/build/index.html" class="list-group-item list-group-item-action">
+                            Day 22
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
