--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
                         <a href="FrontEnd/day22/build/index.html" class="list-group-item list-group-item-action">
                             Day 22
                         </a>
+                        <a href="FrontEnd/day23/build/index.html" class="list-group-item list-group-item-action">
+                            Day 23
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
