--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                         <a href="FrontEnd/day24/build/index.html" class="list-group-item list-group-item-action">
                             Day 24
                         </a>
+                        <a href="FrontEnd/day25/build/index.html" class="list-group-item list-group-item-action">
+                            Day 25
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
