--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                         <a href="FrontEnd/day25/build/index.html" class="list-group-item list-group-item-action">
                             Day 25
                         </a>
+                        <a href="FrontEnd/day26/build/index.html" class="list-group-item list-group-item-action">
+                            Day 26
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
