--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@
                         <a href="FrontEnd/day26/build/index.html" class="list-group-item list-group-item-action">
                             Day 26
                         </a>
+                        <a href="FrontEnd/day27/build/index.html" class="list-group-item list-group-item-action">
+                            Day 27
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
