--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
                         <a href="FrontEnd/day27/build/index.html" class="list-group-item list-group-item-action">
                             Day 27
                         </a>
+                        <a href="FrontEnd/day28/build/index.html" class="list-group-item list-group-item-action">
+                            Day 28
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
