--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                         <a href="FrontEnd/day28/build/index.html" class="list-group-item list-group-item-action">
                             Day 28
                         </a>
+                        <a href="FrontEnd/day29/build/index.html" class="list-group-item list-group-item-action">
+                            Day 29
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
