--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                         <a href="FrontEnd/day29/build/index.html" class="list-group-item list-group-item-action">
                             Day 29
                         </a>
+                        <a href="FrontEnd/day30/build/index.html" class="list-group-item list-group-item-action">
+                            Day 30
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
