--- a/index.html
+++ b/index.html
@@ -122,6 +122,9 @@
                         <a href="FrontEnd/day30/build/index.html" class="list-group-item list-group-item-action">
                             Day 30
                         </a>
+                        <a href="https://cocky-allen-7068e0.netlify.app/" class="list-group-item list-group-item-action">
+                            Day 31
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
