--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                         <a href="https://cocky-allen-7068e0.netlify.app/" class="list-group-item list-group-item-action">
                             Day 31
                         </a>
+                        <a href="FrontEnd/day32/build/index.html" class="list-group-item list-group-item-action">
+                            Day 32
+                        </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
                         </a>
