--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
                         <a href="FrontEnd/day30/build/index.html" class="list-group-item list-group-item-action">
                             Day 30
                         </a>
-                        <a href="https://cocky-allen-7068e0.netlify.app/" class="list-group-item list-group-item-action">
+                        <a href="https://cocky-allen-7068e0.netlify.app/"
+                            class="list-group-item list-group-item-action">
                             Day 31
                         </a>
                         <a href="FrontEnd/day32/build/index.html" class="list-group-item list-group-item-action">
@@ -130,6 +131,27 @@
                         </a>
                         <a href="FrontEnd/random/" class="list-group-item list-group-item-action">
                             Random
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="accordion" id="accordionExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                    Front End
+                </button>
+            </h2>
+            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <div class="list-group">
+                        <a href="FrontEnd/day1/tha1.html" class="list-group-item list-group-item-action">
+                            Day 1
                         </a>
                     </div>
                 </div>
