--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
                 data-bs-parent="#accordionExample">
                 <div class="accordion-body">
                     <div class="list-group">
-                        <a href="FrontEnd/day1/tha1.html" class="list-group-item list-group-item-action">
-                            Day 1
+                        <a href="Backend/day3/index.js" class="list-group-item list-group-item-action">
+                            Day 3
                         </a>
                     </div>
                 </div>
