--- a/index.html
+++ b/index.html
@@ -138,16 +138,16 @@
         </div>
     </div>
 
-    <div class="accordion" id="accordionExample">
+    <div class="accordion" id="accordionbExample">
         <div class="accordion-item">
             <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                    Front End
+                    data-bs-target="#collapsebOne" aria-expanded="false" aria-controls="collapsebOne">
+                    Backend
                 </button>
             </h2>
-            <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
-                data-bs-parent="#accordionExample">
+            <div id="collapsebOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                data-bs-parent="#accordionbExample">
                 <div class="accordion-body">
                     <div class="list-group">
                         <a href="Backend/day3/index.js" class="list-group-item list-group-item-action">
