--- a/index.html
+++ b/index.html
@@ -151,7 +151,10 @@
                 <div class="accordion-body">
                     <div class="list-group">
                         <a href="Backend/day3/index.js" class="list-group-item list-group-item-action">
-                            Day 3
+                            Day 5
+                        </a>
+                        <a href="Backend/day3/index.js" class="list-group-item list-group-item-action">
+                            Day 6
                         </a>
                     </div>
                 </div>
