--- a/index.html
+++ b/index.html
@@ -150,11 +150,14 @@
                 data-bs-parent="#accordionbExample">
                 <div class="accordion-body">
                     <div class="list-group">
-                        <a href="Backend/day3/index.js" class="list-group-item list-group-item-action">
+                        <a href="Backend/day5/index.js" class="list-group-item list-group-item-action">
                             Day 5
                         </a>
-                        <a href="Backend/day3/index.js" class="list-group-item list-group-item-action">
+                        <a href="Backend/day6/index.js" class="list-group-item list-group-item-action">
                             Day 6
+                        </a>
+                        <a href="Backend/day9/" class="list-group-item list-group-item-action">
+                            Day 9
                         </a>
                     </div>
                 </div>
