--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                         <a href="Backend/day6/index.js" class="list-group-item list-group-item-action">
                             Day 6
                         </a>
-                        <a href="Backend/day9/" class="list-group-item list-group-item-action">
+                        <a href="https://github.com/tushar5526/Devsnest/tree/main/Backend" class="list-group-item list-group-item-action">
                             Day 9
                         </a>
                     </div>
